# SCIMES

./: README.md  orion_12CO_mom0.fits  pip-requirements  scimes.py  setup.cfg  setup.py
docs/: algorithm.rst  conf.py  description.rst  index.rst  installation.rst  rtd-pip-requirements  spectcloud.rst  tutorial.rst  using.rst
docs/api/: scimes.test.rst
docs/scimes/: index.rst
licenses/: LICENSE.rst
scimes/: __init__.py  _astropy_init.py  astrodendro_analysis.py  cython_version.py  example_c.c  old_spectral_embedding.py  orion2scimes.ipynb  orion2scimes.py  plotting.py  scimes.py  spectral.py  version.py
