[build_sphinx]
source-dir = docs
build-dir = docs/_build
all_files = 1

[upload_docs]
upload-dir = docs/_build/html
show-response = 1

[pytest]
minversion = 2.2
norecursedirs = build docs/_build
doctest_plus = enabled

[ah_bootstrap]
auto_use = True

[metadata]
package_name = scimes
description = Spectral Clustering for Interstellar Molecular Emission Segmentation
long_description = Molecular Gas Structure Identification via Dendrogram and Spectral Clustering
author = Dario Colombo, Erik Rosolowsky, Adam Ginsburg, Ana Duarte-Cabral, and Annie Hughes
author_email = dario.colombo222@gmail.com
license = BSD
url = http://scimes.readthedocs.org/
edit_on_github = True
github_project = Astroua/SCIMES
